--- a/src/main/resources/application.example.yml
+++ b/src/main/resources/application.example.yml
@@ -3,9 +3,12 @@ spring:
     url: jdbc:h2:mem:projects_manager_application
     driver-class-name: org.h2.Driver
     username: sa
-    password: admin
+    password:
     platform: h2
   h2:
     console:
       enabled: true
       path: /h2-console
+  sql:
+    init:
+      mode: always
